# open-vocabulary-object-detection

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ci-requirements.txt  env-ovod.yml  pytest.ini  requirements.lock.txt  run_e2e_tests.py
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: playwright.yml  smoke.yml
notebooks/: OVOD_Explainer_TLDR.ipynb  utils_ovod_demo.py
notebooks/outputs/: .gitkeep
repo/: .gitignore  DATA_CARD.md  MODEL_CARD.md  Makefile  QUICK_START.md  demo_app.py  demo_setup.py  diagnose_models.py  eval.py  pyproject.toml  requirements.txt  run_eval.py  smoke_model_load.py  start_demo.bat  test_demo_fixes.py  test_eval.py  test_fixes.py  test_imports_only.py  test_sam2.py
repo/metrics/: __init__.py  benchmark.py  coco_eval.py
repo/ovod/: __init__.py  config.py  pipeline.py
repo/scripts/: bootstrap.sh  setup_env.sh
repo/src/: __init__.py  detector.py  nms.py  prompts.py  segmenter.py  visualize.py
repo/tests/: __init__.py  conftest.py  test_basic.py  test_demo.py  test_integration.py  test_nms.py  test_pipeline.py  test_prompts.py
tests/: __init__.py  test_e2e.py  test_eval.py  test_imports.py  test_pipeline.py  test_synthetic_infer.py
tests/e2e/: test_streamlit_app.py
